# hembygd-verktyg

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  bootstrap.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  DOMAIN_MODEL.md  README.md  VISION.md
docs/DECISIONS/: 0001-project-principles.md
docs/adr/: 0001-project-principles.md  0002-layered-architecture.md  0003-versioned-json-export.md
examples/: README.md
hembygd/: __main__.py  cli.py
hembygd/application/: __init__.py  exporting.py  fetching.py  parsing.py
hembygd/domain/: __init__.py  _validation.py  asset.py  document.py  entry.py  entry_type.py  metadata.py  site.py
hembygd/infrastructure/exporters/: __init__.py  json.py
hembygd/infrastructure/http/: __init__.py  urllib_fetcher.py
hembygd/infrastructure/parsers/: __init__.py  hembygd.py
hembygd/presentation/: cli.py
output/: README.md
samples/: README.md
scripts/: README.md
templates/: README.md
tests/: README.md  test_cli.py
tests/application/: test_exporting.py  test_fetching.py  test_parsing.py
tests/domain/: test_entry.py  test_metadata.py  test_resources.py  test_site.py
tests/fixtures/: hembygd_documents.html
tests/infrastructure/exporters/: test_json.py
tests/infrastructure/http/: test_urllib_fetcher.py
tests/infrastructure/parsers/: test_hembygd.py
