[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "hembygd-verktyg"
version = "0.1.0"
description = "Verktyg för att hämta, organisera och publicera digitala arkiv och öppna data för hembygdsföreningar."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Haninge Hembygdsgille" }
]

maintainers = [
    { name = "Haninge Hembygdsgille" }
]

keywords = [
    "hembygd",
    "arkiv",
    "digitalt arkiv",
    "crawler",
    "scraper",
    "github",
    "pdf",
    "öppna data",
    "kulturarv",
    "historia"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "beautifulsoup4>=4.13",
    "requests>=2.32",
    "lxml>=5.3",
    "python-dateutil>=2.9",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/haningehembygd/hembygd-verktyg"
Repository = "https://github.com/haningehembygd/hembygd-verktyg"
Issues = "https://github.com/haningehembygd/hembygd-verktyg/issues"

[project.optional-dependencies]
dev = [
    "black>=25.0",
    "ruff>=0.12",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
